drawing feature working

--- a/snapchap/www/app/components/camera/camera.html
+++ b/snapchap/www/app/components/camera/camera.html
@@ -1,4 +1,4 @@
-<ion-view title="Camera" hide-nav-bar="true" id="camera-view">
+<ion-view title="Camera" hide-nav-bar="true" id="camera-view" has-bouncing="false">
     <ion-content id="camera-view__content">
         <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
           TOP NAV
