--- a/snapchap/www/app/components/chat/chat.html
+++ b/snapchap/www/app/components/chat/chat.html
@@ -26,7 +26,8 @@
         </form>
         <section class="content">
             <input type="text" ng-model="TEST">
-            <button ng-click="test()">SEND MESSAGE</button>
+            <input type="text" ng-model="TESTID">
+            <button ng-click="test(TEST, TESTID)">SEND MESSAGE</button>
             <div ng-repeat="item in arr track by $index">
                 <div>{{item}}</div>
             </div>
