can send snap for 10 seconds

--- a/snapchap/www/app/components/editMessage/editMessage.html
+++ b/snapchap/www/app/components/editMessage/editMessage.html
@@ -69,7 +69,7 @@
           <button id="edit-message-view__timer-btn" class="icon-btn"></button>
           <button id="edit-message-view__save-btn" class="icon-btn" ng-click="saveImage2Device()"></button>
         </div>
-        <button id="edit-message-view__arrow-btn" class="icon-btn" ui-sref="sendTo"></button>
+        <button id="edit-message-view__arrow-btn" class="icon-btn" ng-click="saveImage()"></button>
     </nav>
 
   </ion-content>
