added non-swipe code to ion view

--- a/snapchap/www/app/components/camera/camera.html
+++ b/snapchap/www/app/components/camera/camera.html
@@ -1,5 +1,6 @@
-<ion-view title="Camera" hide-nav-bar="true" id="camera-view" has-bouncing="false">
-    <ion-content id="camera-view__content">
+<ion-view title="Camera" hide-nav-bar="true" id="camera-view" has-bouncing="false" can-swipe-back="false" on-swipe-left="goToChat()">
+    <ion-content id="camera-view__content" >
+
         <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
           TOP NAV
             animateProfileNav directive alters bottom nav on view change
