--- a/snapchap/www/app/components/chat/chat.html
+++ b/snapchap/www/app/components/chat/chat.html
@@ -1,4 +1,4 @@
-<ion-view title="Chat" id="chat-view">
+<ion-view title="Chat" id="chat-view" can-swipe-back="false">
     <ion-content>
 
       <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
