--- a/snapchap/www/app/components/editMessage/editMessage.html
+++ b/snapchap/www/app/components/editMessage/editMessage.html
@@ -1,4 +1,4 @@
-<ion-view title="Edit Message" id="edit-message-view" has-bouncing="false">
+<ion-view title="Edit Message" id="edit-message-view" has-bouncing="false" can-swipe-back="false">
   <ion-content id="edit-message-view__content" has-bouncing="false" ng-init="load()">
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
