--- a/snapchap/www/app/components/profile/profile.html
+++ b/snapchap/www/app/components/profile/profile.html
@@ -1,4 +1,4 @@
-<ion-view title="Profile" id="profile-view">
+<ion-view title="Profile" id="profile-view" can-swipe-back="false">
 
     <ion-content>
         <nav id="profile-view__nav-top" class="nav-top">
