--- a/snapchap/www/app/components/sendTo/sendTo.html
+++ b/snapchap/www/app/components/sendTo/sendTo.html
@@ -1,4 +1,4 @@
-<ion-view title="Send To…" id="send-to-view">
+<ion-view title="Send To…" id="send-to-view" can-swipe-back="false">
 
   <ion-content>
 
