--- a/snapchap/www/app/components/chat/chat.html
+++ b/snapchap/www/app/components/chat/chat.html
@@ -1,5 +1,5 @@
 <ion-view title="Chat" id="chat-view" can-swipe-back="false">
-    <ion-content>
+    <ion-content on-swipe-left="goToView('camera')">
 
       <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~>
         TOP NAV
