fixed compare password and password check page

--- a/snapchap/www/app/components/newPassword/newPassword.html
+++ b/snapchap/www/app/components/newPassword/newPassword.html
@@ -8,7 +8,7 @@
       <div id="newPassword-warning">
         Please choose a new password. Strong <br> passwords use a combination of lowercase <br> and uppercase letters, numbers, and symbols.
       </div>
-      <input id="newPassword-input" type="password" name="name" value="" placeholder="New Password" ng-model="newPassword" ng-keyup="verifyPasswordStrength($event, newPassword)"/>
+      <input id="newPassword-input" type="password" name="name" value="" placeholder="New Password" ng-model="newPassword" ng-keyup="verifyPasswordStrength(newPassword)"/>
       <input id="newPassword-input" type="password" name="name" value="" placeholder="Confirm Password" ng-model="confirmPassword" ng-keyup="verifyPasswordsMatch(newPassword, confirmPassword)"/>
       <div class="emoji">
         <div id="weak-emoji" ng-show="weak">
