--- a/snapchap/www/app/components/password/password.html
+++ b/snapchap/www/app/components/password/password.html
@@ -8,7 +8,7 @@
       <div id="password-warning">
         To set a new password, please enter your <br> current password first.
       </div>
-      <input id="password-input" type="text" name="name" value="" placeholder="Password" ng-model="password" ng-keyup="showContinueButton(password)"/>
+      <input id="password-input" type="password" name="name" value="" placeholder="Password" ng-model="password" ng-keyup="showContinueButton(password)"/>
       <button id="password-button" type="button" name="button">Forgot you password?</button>
       <button id="continue-button" type="button" name="button" ng-show="continueButton" ng-click="verifyPassword(password)">Continue</button>
     </ion-content>
